--- a/docs/create/aws/import/index-database-migration-aws-elasticache-redis-enterprise-cloud.mdx
+++ b/docs/create/aws/import/index-database-migration-aws-elasticache-redis-enterprise-cloud.mdx
@@ -134,7 +134,7 @@ sudo ./riot-redis -r redis://<source Elasticache endpoint>:6379 replicate -r red
 ElastiCache can be configured in two ways: clustered and non-clustered. In the chart below, the first row shows what commands you should perform for the non-clustered scenario, while the second row shows the command for the clustered scenario with a specific database namespace:
 
 
-As you can see, whenever you have a clustered ElastiCache, you need to pass the –cluster option before specifying the source ElastiCache endpoint.
+As you can see, whenever you have a clustered ElastiCache, you need to pass the `–cluster` option before specifying the source ElastiCache endpoint.
 
 ## Important notes
 
