--- a/docs/create/aws/index-aws.mdx
+++ b/docs/create/aws/index-aws.mdx
@@ -12,7 +12,7 @@ The following links provide you with the available options to run apps on Heroku
 <div class="row">
  <div class="col">
      <RedisCard
-        title="AWS Portal"
+        title="Redis on AWS"
         description="Create a Redis database on AWS"
         page="/create/aws/redis-on-aws"
         />
@@ -27,10 +27,34 @@ The following links provide you with the available options to run apps on Heroku
  <div class="col">
     <RedisCard
         title="How to Deploy and Manage Redis Database on AWS Using Terraform"
-        description="Deploy and Manage Redis Database on AWS Using Terraform"
+        description="Using Terraform to Deploy and Manage Redis Database on AWS"
         page="/create/aws/terraform"
         />
  </div>
+ </div>
+
+ <div class="row">
+ <div class="col">
+     <RedisCard
+        title="How to Build a Real-Time Bidding Platform on AWS using NodeJS, AWS Lambda, and Redis"
+        description="Build a Real-Time Bidding Platform on AWS"
+        page="/create/aws/bidding-on-aws"
+        />
+ </div>
+ <div class="col">
+     <RedisCard
+        title="How to migrate your database from AWS Elasticache to Redis without any downtime"
+        description="Migrating Your Database from AWS Elasticache to Redis usin RIOT tool"
+        page="/create/aws/import/database-migration-aws-elasticache-redis-enterprise-cloud"
+        />
+ </div>
  
+ <div class="col">
+     <RedisCard
+        title="How to Build a Real-Time Chat application on AWS using Python and Redis"
+        description="Building a Real-Time Chat application on AWS using Flask and Redis"
+        page="/create/aws/chatapp"
+        />
+ </div>
 
  </div>
