Added 2 blog tutorials under AWS + OpenShift blog too

--- a/docs/create/openshift/index-openshift.mdx
+++ b/docs/create/openshift/index-openshift.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-openshift
 title: How to deploy Redis Enterprise on Red Hat OpenShift Container Platform via OperatorHub 
-sidebar_label: Redis using Red Hat OpenShift 
+sidebar_label: Redis using Red Hat OpenShift Container Platform 
 slug: /create/openshift
 authors: [karan,sumit,ajeet]
 ---
