Fixed the images

--- a/docs/create/openshift/index-openshift.mdx
+++ b/docs/create/openshift/index-openshift.mdx
@@ -221,7 +221,7 @@ spec:
   username: demo@redis.com
 ```
 
-For configuring any additional parameters for the Redis Enterprise Cluster custom resource definition, visit this page.
+For configuring any additional parameters for the Redis Enterprise Cluster custom resource definition, [visit this page](https://github.com/RedisLabs/redis-enterprise-k8s-docs/blob/master/redis_enterprise_cluster_api.md).
 
 Wait till the status shows “Succeeded” under Redis Enterprise Operator. 
 
@@ -243,8 +243,6 @@ Click on “Services” and look out for External Load-balancer IP.
 
 ![image](loadbalancer.png)
 
-
-![image](recui2.png)
 
 ### Step 10. Access the Redis Enterprise Cluster Amdin Console
 
@@ -284,8 +282,6 @@ Once the REDB creation is done, you should see the status as “active”.
 ![Image](re3.png)
 
 Finally, navigate to Redis Enterprise Cluster admin console to verify Redis Enterprise database. 
-
-![Image](re4.png)
 
 Click on the newly created database and then click on configuration option to see the overall details: 
 
@@ -327,7 +323,7 @@ spec:
 
 Note the Host name 'my-db-hostname' from the created route object.
 
-![image](re8.png)
+![image](reservices.png)
 
 
 
@@ -420,9 +416,3 @@ In our next tutorial, we will learn how to deploy a sample Real-time chat applic
 - [Official OpenShift Documentation](https://docs.openshift.com/)
 - [Install a Cluster quickly on GCP](https://docs.openshift.com/container-platform/4.7/installing/installing_gcp/installing-gcp-default.html)
 - [Redis Enterprise on Kubernetes Github Repository](https://github.com/RedisLabs/redis-enterprise-k8s-docs)
-
-
-
-
-
-
