--- a/docs/create/aws/index-aws.mdx
+++ b/docs/create/aws/index-aws.mdx
@@ -56,5 +56,17 @@ The following links provide you with the available options to run apps on Heroku
         page="/create/aws/chatapp"
         />
  </div>
+ </div>
+ <div class="row">
+ <div class="col">
+     <RedisCard
+        title="How to Build and Deploy Your Own Analytics Dashboard on AWS using NodeJS and Redis"
+        description="Learn how to Build and Deploy an Analytics Dashboard using NodeJS and then deploy it on AWS"
+        page="/create/aws/analytics-using-aws"
+        />
+ </div>
+
+ 
+
 
  </div>
