--- a/docs/create/openshift/index-openshift.mdx
+++ b/docs/create/openshift/index-openshift.mdx
@@ -179,7 +179,7 @@ Click on “Events” to see the streaming events to troubleshoot or check the p
 
 ![image](streaming_events.png)
 
-Step 8. Create Redis Enterprise Cluster
+### Step 8. Create Redis Enterprise Cluster
 
 
 Once Redis Enterprise Operator is installed, we will create a Redis Enterprise Cluster instance using RedisEnterpriseCluster (REC) custom resource.
