--- a/docs/create/openshift/index-openshift.mdx
+++ b/docs/create/openshift/index-openshift.mdx
@@ -219,7 +219,7 @@ spec:
   username: demo@redis.com
 ```
 
-For configuring any additional parameters for the Redis Enterprise Cluster custom resource definition, [visit this page](https://github.com/RedisLabs/redis-enterprise-k8s-docs/blob/master/redis_enterprise_cluster_api.md)
+To learn about additional configuration parameters for the Redis Enterprise Cluster custom resource definition, [visit this page](https://github.com/RedisLabs/redis-enterprise-k8s-docs/blob/master/redis_enterprise_cluster_api.md)
 
 Wait till the status shows “Succeeded” under Redis Enterprise Operator. 
 
