--- a/docs/create/aws/analytics-using-aws/index-analytics-using-aws.mdx
+++ b/docs/create/aws/analytics-using-aws/index-analytics-using-aws.mdx
@@ -21,7 +21,7 @@ Let’s take a look at how this was achieved.
 
 ### What will you build?
 
-You’ll build an analytics dashboard app that uses Redis Bitmap written in NodeJS (JavaScript) and then deploy it to AWS
+You’ll build an analytics dashboard app that uses Redis Bitmap written in NodeJS (JavaScript) and then deploy it to AWS.
 
 Ready to get started? Ok, let’s dive straight in.
 
