--- a/docs/create/aws/analytics-using-aws/index-analytics-using-aws.mdx
+++ b/docs/create/aws/analytics-using-aws/index-analytics-using-aws.mdx
@@ -63,7 +63,7 @@ Choose AWS as a Cloud vendor while creating your new subscription. At the end of
 ### Step 3. Set up a backend environment
 
 
-First we will be settin up environmental variables
+First we will be setting up environment variables
 
 Go to /server folder (cd ./server) and then execute the below command:
 
