--- a/docs/create/aws/analytics-using-aws/index-analytics-using-aws.mdx
+++ b/docs/create/aws/analytics-using-aws/index-analytics-using-aws.mdx
@@ -108,7 +108,7 @@ COMPOSE_PROJECT_NAME=redis-analytics-bitmaps
 
 ### Step 6. Set up the frontend environment
 
-Go to /client folder (cd ./client) and then:
+Go to the `client` folder (`cd ./client`) and then:
 
   ```bash
    cp .env.example .env
