--- a/docs/create/aws/analytics-using-aws/index-analytics-using-aws.mdx
+++ b/docs/create/aws/analytics-using-aws/index-analytics-using-aws.mdx
@@ -333,7 +333,7 @@ to
 - 1 Week of December: Similar as above, but from 2015-12-01 to 2015-12-07
 - 2 Week of December: Similar as above, but from 2015-12-08 to 2015-12-14
 - 3 Week of December: Similar as above, but from 2015-12-15 to 2015-12-21
-- 4 Week of December: Similar as above, but from 2015-12-22 to 2015-12-28
+- 4th Week of December: Similar as above, but from 2015-12-22 to 2015-12-28
 - 5 Week of December: Similar as above, but from 2015-12-29 to 2015-12-31
 
 ##### Example:
