--- a/docs/create/openshift/index-openshift.mdx
+++ b/docs/create/openshift/index-openshift.mdx
@@ -182,7 +182,7 @@ Click on “Events” to see the streaming events to troubleshoot or check the p
 ### Step 8. Create Redis Enterprise Cluster
 
 
-Once Redis Enterprise Operator is installed, we will create a Redis Enterprise Cluster instance using RedisEnterpriseCluster (REC) custom resource.
+Once the Redis Enterprise Operator is installed, we will create a Redis Enterprise Cluster instance using RedisEnterpriseCluster (REC) custom resource.
 
 RedisEnterpriseCluster is the Schema for the redisenterpriseclusters API. From the installed Redis EnterpriseOperator, Click on “Create Redis Enterprise Cluster'' and click on “YAML” section and paste below sample yaml file:
 
