--- a/docs/create/openshift/index-openshift.mdx
+++ b/docs/create/openshift/index-openshift.mdx
@@ -184,7 +184,7 @@ Click on “Events” to see the streaming events to troubleshoot or check the p
 
 Once the Redis Enterprise Operator is installed, we will create a Redis Enterprise Cluster instance using RedisEnterpriseCluster (REC) custom resource.
 
-RedisEnterpriseCluster is the Schema for the redisenterpriseclusters API. From the installed Redis EnterpriseOperator, Click on “Create Redis Enterprise Cluster'' and click on “YAML” section and paste below sample yaml file:
+RedisEnterpriseCluster is the Schema for the redisenterpriseclusters API. From the installed Redis EnterpriseOperator, Click on "Create Redis Enterprise Cluster" and click on the "YAML" section and paste the following sample YAML file:
 
 
 ![image](create_rec.png)
