--- a/docs/create/aws/analytics-using-aws/index-analytics-using-aws.mdx
+++ b/docs/create/aws/analytics-using-aws/index-analytics-using-aws.mdx
@@ -164,7 +164,7 @@ The event data is stored in various keys and data types which is discussed below
 - bitmap
 - set
 
-It generates key like: 
+It generates keys with the following naming convention: 
 
 
   ```bash
