--- a/docs/create/aws/analytics-using-aws/index-analytics-using-aws.mdx
+++ b/docs/create/aws/analytics-using-aws/index-analytics-using-aws.mdx
@@ -223,7 +223,7 @@ So, it will be stored like:
   SETBIT rab:bitmap:custom:cohort-buy:timeSpan:2015-12 10 1
  ````
 
-- We assume that user cannot buy without register.
+- We assume that user cannot buy without registering first.
 
 #### Retention data
 
