--- a/docs/create/aws/analytics-using-aws/index-analytics-using-aws.mdx
+++ b/docs/create/aws/analytics-using-aws/index-analytics-using-aws.mdx
@@ -330,7 +330,7 @@ to
     BITCOUNT rab:bitmap:action:visit:{page}:timeSpan:2015-12-31
    ``` 
 
-- 1 Week of December: Similar as above, but from 2015-12-01 to 2015-12-07
+- 1st Week of December: Similar as above, but from 2015-12-01 to 2015-12-07
 - 2 Week of December: Similar as above, but from 2015-12-08 to 2015-12-14
 - 3 Week of December: Similar as above, but from 2015-12-15 to 2015-12-21
 - 4th Week of December: Similar as above, but from 2015-12-22 to 2015-12-28
